# OpenGL

./: .gitignore  CMakeLists.txt  ReadMe.md
include/og/: og.h
include/og/core/: camera.h  fbo.h  mesh.h  model.h  renderer.h  shader.h  texture.h  vertex_array.h
include/og/tests/: test.h  test_batch_rendering.h  test_clear_color.h  test_draw_cube.h  test_lighting_maps.h  test_lights.h  test_load_model.h  test_material.h  test_texture_2d.h
resources/batch_rendering/shaders/: batch_color.frag  batch_color.vert
resources/draw_cube/shaders/: cube.frag
resources/lighting_maps/shaders/: box.frag
resources/lights/shaders/: box_with_lights.frag
resources/load_model/shaders/: model.frag  model.vert
resources/texture2d/shaders/: basic.frag
src/: application.cpp  batch_renderer.cpp  batch_renderer.h  camera.cpp  camera.h  core.h  fbo.cpp  fbo.h  index_buffer.cpp  index_buffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
src/core/: CMakeLists.txt  camera.cpp  fbo.cpp  index_buffer.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
src/resources/lighting_maps/: description.txt
src/resources/lights/shaders/: box_with_lights.vert
src/resources/material/shaders/: material.frag
src/resources/shaders/: basic.vert  batch_color.frag  batch_color.vert  cube.frag  cube.vert
src/resources/shaders/test_draw_cube/: cube.frag  cube.vert  light.frag  light.vert
src/resources/texture2d/shaders/: basic.vert
src/tests/: CMakeLists.txt  test.cpp  test.h  test_batch_rendering.cpp  test_batch_rendering.h  test_clear_color.cpp  test_clear_color.h  test_draw_cube.cpp  test_draw_cube.h  test_lighting_maps.cpp  test_lighting_maps.h  test_lights.cpp  test_lights.h  test_load_model.cpp  test_material.cpp  test_material.h  test_texture_2d.cpp  test_texture_2d.h
